kubeflow/apps/centraldashboard/upstream/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-centraldashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kubeflow.dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: centraldashboard
            port:
              number: 80
